--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "wgpulearn5"
+name = "cube_commander"
 version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "wgpulearn5"
+name = "cube_commander"
 path = "src/main.rs"
 
 [lib]
-name = "wgpulearn5"
+name = "cube_commander"
 path = "src/lib.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -26,6 +26,7 @@ anyhow = "1.0"
 tobj = { version = "3.2.1", features = [
     "async",
 ]}
+rand = "0.8.5"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
