--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/lib.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
 cgmath = "0.18"
 cfg-if = "1"
 winit = "0.26"
@@ -27,6 +28,7 @@ tobj = { version = "3.2.1", features = [
     "async",
 ]}
 rand = "0.8.5"
+rapier3d = "0.15.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
